--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 	<script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js">
 
 	</script>
+
+	<script src="https://unpkg.com/@isomorphic-git/lightning-fs">
+
+	</script>
+	<script src="https://unpkg.com/isomorphic-git">
+
+	</script>
+  <script type="module">
+import http from 'https://unpkg.com/isomorphic-git@beta/http/web/index.js'
+const fs = new LightningFS('fs')
+
+const dir = '/test-clone'
+git.clone({ fs, http, dir, url: 'https://github.com/isomorphic-git/lightning-fs', corsProxy: 'https://cors.isomorphic-git.org' }).then(console.log)
+</script>
+
 	<script src="main.js">
 
 	</script>
