--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://unpkg.com/@isomorphic-git/lightning-fs"></script>
+  <script src="https://unpkg.com/isomorphic-git"></script>
+  <script type="module">
+    import http from 'https://unpkg.com/isomorphic-git@beta/http/web/index.js'
+    const fs = new LightningFS('fs')
 
-	</script>
-
-	<script src="https://unpkg.com/@isomorphic-git/lightning-fs">
-
-	</script>
-	<script src="https://unpkg.com/isomorphic-git">
-
-	</script>
-
-	<script src="main.js">
-
-	</script>
+    const dir = '/test-clone'
+    git.clone({ fs, http, dir, url: 'https://github.com/isomorphic-git/lightning-fs', corsProxy: 'https://cors.isomorphic-git.org' }).then(console.log("aaa"))
+  </script>
 </head>
 
 <body>
-	<div id="container"></div>
 </body>
 
 </html>
