--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     const fs = new LightningFS('fs')
 
     const dir = '/test-clone'
-    git.clone({ fs, http, dir, url: 'https://github.com/isomorphic-git/lightning-fs', corsProxy: 'https://cors.isomorphic-git.org' }).then(console.log("aaa"))
+    git.clone({ fs, http, dir, url: 'https://github.com/isomorphic-git/lightning-fs', corsProxy: 'https://cors.isomorphic-git.org' }).then(console.log)
   </script>
 </head>
 
