--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<script src="https://unpkg.com/@isomorphic-git/lightning-fs">
 
@@ -16,7 +17,11 @@
 </head>
 
 <body>
-	<div id="container"></div>
+  <section class="basic-grid">
+    <div id="explorer"></div>
+
+    <div id="container"></div>
+  </section>
 </body>
 
 </html>
