Open file is now printed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 <body>
   <section class="basic-grid">
+    <div>First</div>
+
+    <div id="openFiles">second</div>
+
     <div id="explorer"></div>
 
     <div id="container"></div>
