--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<script src="https://unpkg.com/@isomorphic-git/lightning-fs">
-
-	</script>
-	<script src="https://unpkg.com/isomorphic-git@beta">
-
-	</script>
-  	<script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js">
-	</script>
+	<script src="https://unpkg.com/@isomorphic-git/lightning-fs"></script>
+  <script src="https://unpkg.com/isomorphic-git@beta"></script>
+  <script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js"></script>
 	<script type="module" src="main.js"></script>
-
 </head>
 
 <body>
   <section class="basic-grid">
     <div>First</div>
 
-    <div id="openFiles">second</div>
+    <div id="openFilesContainer">
+      <span id="openFileActive"></span>
+    </div>
 
     <div id="explorer"></div>
 
