allows to save changes by double clikcing the currenlty active file tab

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>First</div>
 
     <div id="openFilesContainer">
-      <span id="openFileActive"></span>
+      <div id="openFileActive"></div>
     </div>
 
     <div id="explorer"></div>
