File tab kinda works

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <section class="basic-grid">
     <div>First</div>
 
-    <div id="openFilesContainer">
-      <div id="openFileActive"></div>
-    </div>
+    <div id="openFilesContainer"></div>
 
     <div id="explorer"></div>
 
